<resources>
    <string name="app_name">AwesAuth</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_auth">Authorization</string>
    <string name="title_settings">Settings</string>
    <string name="select_auth_type">Please select \'Authorization Type\' firstly</string>

    <string name="auth_not_granted">Authorization NOT Granted</string>
    <string name="auth_granted">Authorization GRANTED !</string>
    <string name="sign_in">Sign In with AppAuth</string>
    <string name="sign_out">Sign Out</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="get_info">Get User Info</string>
    <string name="userinfo_profile_content_description">User profile picture</string>

    <!--Google Sign In-->
    <string name="sign_in_with_google">Sign In with Google </string>
    <string name="token_expired">Token Expired</string>
    <string name="id_token">ID Token:</string>
    <string name="pref_key_use_id_token">pk_use_id_token</string>
    <string name="pref_key_use_id_token_title">Use ID Token</string>

    <!--Button-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--Preference-->
    <string name="pref_auth_type_list">Authorization Type</string>
    <string name="pref_key_google_auth_type">pk_google_auth_type</string>
    <string-array name="pref_auth_list_titles">
        <item>AppAuth</item>
        <item>Google Sign-in</item>
    </string-array>
    <string-array name="pref_auth_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--Use PendingIntent-->
    <string name="pref_key_use_pending_intent">pk_use_pending_intent</string>
    <string name="cb_use_pending_intent_title">Use PendingIntent</string>
    <string name="cb_use_pending_intent_summary">Summary: Use PendingIntent</string>
    <string name="fetching_token">Start fetching token …</string>

</resources>