<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="appauth_category"
            android:title="AppAuth"
            android:layout="@layout/preferences_category">

        <CheckBoxPreference
                android:key="@string/pref_key_use_pending_intent"
                android:title="@string/cb_use_pending_intent_title"
                android:icon="@android:drawable/ic_menu_add"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="gsi_category"
        android:title="Google SignIn"
        android:layout="@layout/preferences_category">

        <SwitchPreference
            android:key="@string/pref_key_use_id_token"
            android:title="@string/pref_key_use_id_token_title"
            android:icon="@android:drawable/ic_menu_view"
            />

    </PreferenceCategory>


</PreferenceScreen>