<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/blue_grey_500">

    <include layout="@layout/auth_status"/>

    <Button
            android:text="@string/sign_in_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_signin"
            android:background="@mipmap/btn_google_signin_dark_normal_mdpi"
            android:elevation="8dp"/>
    <!--android:layout_gravity="center"-->

    <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

        <Button
                android:text="@string/refresh_token"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_refresh_token"
                android:layout_weight="1"
                android:elevation="8dp"
                android:layout_gravity="end"
                tools:ignore="ButtonStyle"
                style="@style/Widget.AppCompat.Button.Colored"
                android:backgroundTint="@color/colorPrimary"/>

        <Button
                android:text="@string/sign_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_signout"
                android:layout_weight="1"
                android:elevation="8dp"
                android:layout_gravity="start"
                tools:ignore="ButtonStyle"
                style="@style/Widget.AppCompat.Button.Colored"
                android:backgroundTint="@android:color/holo_orange_dark"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/toke_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/token_expired"
                    android:textColor="?attr/colorButtonNormal"/>

            <TextView
                    android:id="@+id/token_info_expire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="false"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_orange_light"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/id_token"
                    android:singleLine="true"
                    android:textColor="?attr/colorButtonNormal"/>

            <TextView
                    android:id="@+id/token_info_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ID token returned"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_orange_light"/>
        </LinearLayout>


    </LinearLayout>


    <include layout="@layout/user_info"/>
</LinearLayout>